<resources>
    <string name="app_name">QuizApp</string>

    <!-- Login/Register Quiz XML strings-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="logout_text">Logout</string>
    <string name="create_acc">Create a new account</string>
    <string name="back_to_login">back to Login</string>
    <string name="welcome_back">Welcome back!</string>

    <!-- Main XML strings -->
    <string name="it_seems_that_your_name_is_missing_what_is_your_name">It seems that your name is missing, what is your name?</string>
    <string name="set_name">Set name</string>
    <string name="my_name_is">My name is…</string>
    <string name="loading_name">Loading name…</string>
    <string name="change_name">Change name</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="practice">Practice</string>
    <string name="quizapp">QuizApp</string>
    <string name="loading">Loading…</string>

    <!-- Practice Quiz XML strings-->
    <string name="start_quiz">Start Quiz</string>
    <string name="cancel_text">Cancel</string>
    <string name="generate_random_quiz">Generate Random Quiz</string>
    <string name="run_quiz_with_options_above">Run quiz with options above</string>
    <string name="generate_your_quiz">Generate your quiz:</string>
    <string name="questions_were_not_generated">Questions were not generated…</string>
    <string name="score_for_last_quiz">Score for last quiz: </string>
    <string name="total_score">Total score: </string>
    <string name="ok">OK</string>
    <string name="close_quiz">Close quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="this_will_be_the_question">This will be the question</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="next_question">Next question!</string>
    <string name="total_practice_score">Total practice score:</string>
    <string name="score">Score:</string>
    <string name="difficulty">Difficulty</string>
    <string name="choose_difficulty">Choose difficulty</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose category</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="choose_number_of_questions">Choose number of questions</string>

    <!-- Daily Quiz XML strings-->
    <string name="daily_quiz">Daily quiz</string>
    <string name="daily_quiz_available">Daily quiz available</string>
    <string name="proceed">Proceed</string>
    <string name="later">Later</string>
    <string name="daily_quiz_not_available">Daily quiz not available</string>
    <string name="exit_quizapp">Exit QuizApp?</string>
    <string name="questions_left">Questions left:</string>
    <string name="time_left_text">Time left:</string>
    <string name="time_left_number">15</string>
    <string name="available_date">Available date:</string>
    <string name="start_daily_quiz">Start Daily Quiz</string>
    <string name="try_it_later">Try it later</string>
    <string name="close_daily_quiz">Close daily quiz?</string>
    <string name="info_daily_quiz_title">Info Daily Quiz</string>
    <string name="info_daily_quiz_1">Daily quiz is a game mode that allows users to compete on a leaderboard. This quiz is available every 24 hours after answering all questions,</string>
    <string name="info_daily_quiz_2">15 seconds per question.</string>
    <string name="info_daily_quiz_3">If you exit the quiz, the score will be set to 0 and the next available time for daily quiz will be 24 hours later,</string>


    <!-- Leaderboard XML strings-->
    <string name="leaderboard_title">Leaderboard</string>
    <string name="leaderboard_place">Place</string>
    <string name="leaderboard_name">Name</string>
    <string name="leaderboard_score">Score</string>
    <string name="previous_leaderboard_button">Previous</string>
    <string name="leaderboard_next_button">Next</string>
    <string name="no_internet_connection">No internet connection</string>



</resources>