<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/generate_your_quiz_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/generate_your_quiz"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_difficulty"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/text_input_layout_quiz_options">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_textview_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/difficulty"
            android:inputType="none"
            android:text="@string/choose_difficulty"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/text_input_layout_quiz_options">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_textview_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="320sp"
            android:hint="@string/category"
            android:inputType="none"
            android:text="@string/choose_category"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/text_input_layout_quiz_options">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_textview_number_of_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_questions"
            android:inputType="none"
            android:text="@string/choose_number_of_questions"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/generate_random_quiz_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:text="@string/generate_random_quiz"
            android:textColor="@color/green_for_buttons" />

        <Button
            android:id="@+id/generate_quiz_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#5AA8AF"
            android:text="@string/start_quiz"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>