<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info_daily_quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/info_daily_quiz_title"
        android:textColor="@color/aqua"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info_daily_quiz_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="20sp"
        android:text="@string/info_daily_quiz_1"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/info_daily_quiz_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="20sp"
        android:text="@string/info_daily_quiz_3"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/info_daily_quiz_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="20sp"
        android:text="@string/info_daily_quiz_2"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_daily_quiz_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:textSize="25sp"
            android:backgroundTint="#5AA8AF"
            android:text="@string/start_daily_quiz"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/try_it_later_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:text="@string/try_it_later"
            android:textColor="#5AA8AF" />

    </LinearLayout>

</LinearLayout>