<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_show_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/score_for_last_quiz"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_show_total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/total_score"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ok_quiz_results"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AA8AF"
        android:layout_marginTop="15sp"
        android:textSize="25sp"
        android:text="@string/ok"
        android:textColor="@color/white" />

</LinearLayout>