<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/loading_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_quiz"
        android:layout_width="300sp"
        android:textSize="30sp"
        android:layout_margin="6sp"
        android:background="@drawable/main_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/generate_quiz" />

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="300sp"
        android:textSize="30sp"
        android:layout_margin="6sp"
        android:background="@drawable/main_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard" />

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="300sp"
        android:textSize="30sp"
        android:layout_margin="6sp"
        android:background="@drawable/main_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/change_name" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="300sp"
        android:textSize="30sp"
        android:layout_margin="6sp"
        android:background="@drawable/main_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/logout_text" />
</LinearLayout>