<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SetOrChangeName">

    <TextView
        android:id="@+id/message_set_or_change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/it_seems_that_your_name_is_missing_what_is_your_name"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:maxLength="15"
            android:hint="@string/my_name_is"
            android:textColor="@color/input_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_set_or_change_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            android:text="@string/cancel_text"
            android:textColor="@color/green_for_buttons" />

        <Button
            android:id="@+id/set_or_change_name_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#5AA8AF"
            android:text="@string/set_name"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>