<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".authentication.SetName">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/it_seems_that_your_name_is_missing_what_is_your_name"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_name_is"
            android:textColor="@color/input_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set_name_button"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/button_login_register"
        android:backgroundTint="@color/aqua"
        android:text="@string/set_name"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>