<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leaderboard_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".leaderboard.Leaderboard">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/leaderboard_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/leadeboard_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:stretchColumns="*"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leaderboard_previous_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#5AA8AF"
            android:text="@string/previous_leaderboard_button"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/leaderboard_next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#5AA8AF"
            android:text="@string/leaderboard_next_button"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
